tests/analyze/pattern-wrong-literal-type/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `string`, but found `int`.
> 1 | def bad = fun n {
      ^

